--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -1,4 +1,5 @@
 extends ../../layouts/default.pug 
+include ../../mixins/filter-status.pug  
 
 block main 
     h1 Danh sách sản phẩm
@@ -8,12 +9,11 @@ block main
         .card-body
             .row 
                 .col-6
-                    each item in filterStatus
-                        button(class = `btn btn-sm ml-1 btn-outline-success ${item.class}` button-status=item.status) #{item.name}
+                    +filter-status(filterStatus)
                 .col-6
                     form(id="form-search")
                         .input-group
-                            input.form-control(type="text" placeholder="Nhập từ khóa" name="keyword" class="form-control")                                                                                                              
+                            input.form-control(type="text" placeholder="Nhập từ khóa" name="keyword" value=keyword class="form-control")                                                                                                              
                             
                             .input-group-append
                                 button(class = "btn btn-success" type="submit") Tìm
